--- a/css/main.css
+++ b/css/main.css
@@ -55,14 +55,6 @@ p {
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 768px) {
-  h3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-  }
-}
 ul,
 ol {
   margin-top: 0;
@@ -367,30 +359,32 @@ body {
   fill: var(--color-header);
 }
 
-.nav-many {
+.nav-menu {
   display: flex;
   flex-direction: column;
 }
-.nav-many__item {
-  margin-bottom: 36px;
+.nav-menu__item {
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
   line-height: 1.76;
   letter-spacing: 0.02em;
 }
-.nav-many__link {
+.nav-menu__link {
   text-decoration: none;
   color: #212121;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-many__link:hover, .nav-many__link:focus, .nav-many__link:active {
+.nav-menu__link:hover, .nav-menu__link:focus, .nav-menu__link:active {
   color: var(--color-header);
 }
+.nav-menu__link__item :not(last-child) {
+  padding-bottom: 36px;
+}
 
-.many-contacts__list {
+.menu-contacts__list {
   display: flex;
   flex-direction: column;
   font-weight: 500;
@@ -398,10 +392,11 @@ body {
   line-height: 1.23;
   letter-spacing: 0.02em;
   list-style: none;
+  padding-top: 300px;
   padding-bottom: 32px;
 }
 
-.many-contacts__link {
+.menu-contacts__link {
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -410,11 +405,11 @@ body {
   padding-bottom: 32px;
 }
 
-.many-lists {
+.menu-lists {
   display: flex;
   align-items: center;
 }
-.many-lists__item {
+.menu-lists__item {
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -422,11 +417,11 @@ body {
   letter-spacing: 0.02em;
   padding-right: 10px;
 }
-.many-lists__item-link {
+.menu-lists__item-link {
   text-decoration: none;
   color: #2196f3;
 }
-.many-lists__item-link::after {
+.menu-lists__item-link::after {
   content: "";
   position: absolute;
   width: 22px;
@@ -435,7 +430,7 @@ body {
   transform: rotate(90deg);
   box-sizing: border-box;
 }
-.many-lists .many-lists__item :not(first-child) {
+.menu-lists .menu-lists__item :not(first-child) {
   padding-left: 10px;
 }
 
@@ -542,21 +537,33 @@ body {
   .benefits__item--icon {
     width: 100vw;
   }
+
+  .benefits-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
 @media screen and (max-width: 1200px) {
   .benefits__list {
     flex-wrap: wrap;
-    margin-left: -30px;
     margin-top: -30px;
+    margin-right: -30px;
   }
 
   .benefits-item {
-    margin-left: 30px;
     margin-top: 30px;
+    margin-right: 20px;
   }
 
   .benefits__item--icon {
     width: 354px;
+  }
+
+  .benefits {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -645,13 +652,32 @@ body {
   color: #ffffff;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .comande-img {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
+  }
+
+  .about-list-img {
+    width: 460px;
+    height: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .comande-img {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .about-list-img {
+    width: 354px;
+    height: 374px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -711,7 +737,7 @@ body {
   margin-bottom: 16px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .customers-icon-list {
     list-style: none;
     display: flex;
@@ -726,6 +752,8 @@ body {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     margin-left: -30px;
     margin-top: -30px;
   }
@@ -762,11 +790,20 @@ body {
   border: 1px solid #2196f3;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 480px) {
+  .footer-h-three {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
   .footer-container {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .footer-container-mobile {
@@ -776,10 +813,59 @@ body {
   }
 
   .block-footer {
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .footer-padding-logo {
+    padding-bottom: 20px;
+  }
+
+  .footer-padding-contacts {
+    padding-bottom: 60px;
+  }
+
+  .modal-form-footer-input {
+    width: 434px;
+  }
+
+  .modal-form-footer-input {
+    margin-bottom: 20px;
+    justify-content: center;
+  }
+
+  .modal-footer-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-text-decoration: column;
+            text-decoration: column;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .footer-container-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .block-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .mobile-footer {
+    padding-right: 160px;
   }
 
   .footer-padding-logo {
@@ -796,6 +882,7 @@ body {
 
   .modal-form-footer-input {
     margin-bottom: 20px;
+    justify-content: center;
   }
 
   .modal-footer-button {
@@ -804,6 +891,13 @@ body {
     justify-content: center;
     -webkit-text-decoration: column;
             text-decoration: column;
+    margin: 0 auto;
+  }
+
+  .footer-h-three {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
   }
 }
@@ -967,14 +1061,35 @@ body {
   padding: 9px 29px;
 }
 
+@media screen and (max-width: 767px) {
+  .menu-portfolio {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  .menu-portfolio-item {
+    padding-bottom: 15px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .menu-portfolio {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-portfolio {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+  }
+}
 .main-menu {
   padding-bottom: 0px;
-}
-
-.menu-portfolio {
-  list-style: none;
-  display: flex;
-  justify-content: center;
 }
 
 .menu-portfolio-item :hover, .menu-portfolio-item :focus {
@@ -1008,6 +1123,24 @@ body {
   color: var(--button-portfolio-hf);
 }
 
+@media screen and (min-width: 480px) {
+  .img-portfolio-x {
+    width: 450px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .img-portfolio-x {
+    width: 354px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .img-portfolio-x {
+    width: 370px;
+    height: 294px;
+  }
+}
 .portfolio {
   list-style: none;
   display: flex;
@@ -1289,32 +1422,32 @@ body {
   fill: var(--color-header);
 }
 
-.mobile-meny {
+.mobile-menu {
   position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vw;
+  height: 796px;
   background-color: #ffffff;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
-.mobile-meny.is-open {
+.mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
 }
 
-.mobile-meny__close {
+.mobile-menu__close {
   background-color: #ffffff;
   border: none;
   padding: 0;
   line-height: 0;
 }
 
-.mobile-meny__closen-icon {
+.mobile-menu__closen-icon {
   height: 40px;
   width: 40px;
   cursor: pointer;
@@ -1323,17 +1456,17 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mobile-meny__closen-icon:hover, .mobile-meny__closen-icon:focus, .mobile-meny__closen-icon:active {
+.mobile-menu__closen-icon:hover, .mobile-menu__closen-icon:focus, .mobile-menu__closen-icon:active {
   fill: var(--color-header);
 }
 
-.mobile-meny__close-btn {
+.mobile-menu__close-btn {
   position: absolute;
   top: 10px;
   right: 15px;
 }
 
-.mobile-meny__conteiner {
+.mobile-menu__conteiner {
   position: relative;
   min-height: 200px;
   padding-top: 48px;
