--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -12,20 +12,30 @@
   .benefits__item--icon {
     width: 100vw;
   }
+  .benefits-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
-// -768
+// -1200
 @media screen and (max-width: 1200px) {
   .benefits__list {
     flex-wrap: wrap;
-    margin-left: -30px;
     margin-top: -30px;
+    margin-right: -30px;
   }
   .benefits-item {
-    margin-left: 30px;
     margin-top: 30px;
+    margin-right: 20px;
   }
   .benefits__item--icon {
     width: 354px;
+  }
+  .benefits {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
