--- a/sass/layout/_comande.scss
+++ b/sass/layout/_comande.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .comande-img {
     list-style: none;
     display: flex;
@@ -6,8 +6,24 @@
     margin-left: -30px;
     margin-top: -30px;
   }
+  .about-list-img {
+    width: 460px;
+    height: 450px;
+  }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 768px) {
+  .comande-img {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .about-list-img {
+    width: 354px;
+    height: 374px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .comande-img {
