--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,6 +1,6 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .customers-icon-list {
     list-style: none;
     display: flex;
@@ -15,6 +15,8 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     margin-left: -30px;
     margin-top: -30px;
   }
