--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,12 +1,37 @@
+@media screen and (max-width: 480px) {
+}
+@media screen and (max-width: 767px) {
+  .menu-portfolio {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .menu-portfolio-item {
+    padding-bottom: 15px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .menu-portfolio {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-portfolio {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .main-menu {
   padding-bottom: 0px;
 }
 
-.menu-portfolio {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-}
 .menu-portfolio-item {
   & :hover,
   & :focus {
