--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,23 +1,48 @@
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199px) {
+  .mobile-footer {
+    padding-right: 160px;
+  }
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .mobile-footer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    margin-right: 173px;
+  }
+  .block-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .footer-h-three {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
   }
+  .margin-footer {
+  }
+}
+@media screen and (max-width: 767px) {
   .footer-container {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
     flex-direction: column;
   }
+  .mobile-footer {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .mobile-footer {
+  }
+}
+@media screen and (min-width: 480px) {
   .footer-container-mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .block-footer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,27 +67,19 @@
     text-decoration: column;
     margin: 0 auto;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .footer-container {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .footer-container-mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .block-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
   .mobile-footer {
-    padding-right: 160px;
+    padding-right: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  // .footer-container-mobile {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
+  .block-footer {
+    align-items: center;
+    justify-content: center;
   }
   .footer-padding-logo {
     padding-bottom: 20px;
@@ -84,12 +101,6 @@
     text-decoration: column;
     margin: 0 auto;
   }
-  .footer-h-three {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -99,11 +110,7 @@
   }
   .modal-form-footer-label {
     display: flex;
-    align-items: center;
-  }
-  .margin-footer {
-    margin-bottom: 20px;
-    margin-right: 156px;
+    align-items: baseline;
   }
   .footer-h-three {
     font-weight: 700px;
@@ -126,6 +133,9 @@
   }
   .button {
     transform: translateY(25%);
+  }
+  .footer-padding-logo {
+    padding-right: 156px;
   }
 }
 .footer {
@@ -225,7 +235,7 @@
   border-radius: 4px;
 }
 .modal-form-footer-input {
-  height: 50px;
+  height: 47px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
