--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -223,22 +223,42 @@
     line-height: 1.22;
     letter-spacing: 0.02em;
     padding-right: 10px;
+
+    position: relative;
   }
   &__item-link {
     text-decoration: none;
     color: #2196f3;
-    &::after {
-      content: "";
-      position: absolute;
-      width: 22px;
-      height: 0px;
+  }
+}
 
-      border: 1px solid rgba(33, 33, 33, 0.2);
-      transform: rotate(90deg);
-      box-sizing: border-box;
-    }
-  }
-  .menu-lists__item :not(first-child) {
-    padding-left: 10px;
-  }
+.menu-lists__item :not(lats-child)::after {
+  content: "";
+  position: absolute;
+  width: 22px;
+  height: 0px;
+
+  top: 7px;
+  left: 88px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  box-sizing: border-box;
+
+  margin-right: -30px;
+}
+
+.menu-lists__item-link {
+  margin-right: 30px;
+}
+
+.footer-icon-after::after {
+  content: "";
+  position: absolute;
+  width: 22px;
+  height: 0px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  box-sizing: border-box;
 }
