--- a/sass/layout/_burger.scss
+++ b/sass/layout/_burger.scss
@@ -27,7 +27,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 796px;
+  height: 100vh;
   background-color: #ffffff;
 
   opacity: 0;
@@ -69,6 +69,10 @@
 }
 
 .mobile-menu__conteiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
   position: relative;
   min-height: 200px;
   padding-top: 48px;
