--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -189,17 +189,13 @@
 }
 
 .menu-contacts__list {
-  display: flex;
-  flex-direction: column;
-
   font-weight: 500;
   font-size: 14px;
   line-height: 1.23;
   letter-spacing: 0.02em;
   list-style: none;
 
-  padding-top: 300px;
-  padding-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .menu-contacts__link {
@@ -209,7 +205,7 @@
   line-height: 1.17;
   letter-spacing: 0.02em;
 
-  padding-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .menu-lists {
@@ -232,14 +228,14 @@
   }
 }
 
-.menu-lists__item :not(lats-child)::after {
+.menu-lists__item:not(firs-child):after {
   content: "";
   position: absolute;
   width: 22px;
   height: 0px;
 
   top: 7px;
-  left: 88px;
+  left: -29px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   transform: rotate(90deg);
