--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,3 +1,18 @@
+@media screen and (min-width: 767px) {
+  .portfolio {
+  }
+  .img-portfolio-x {
+    width: 354px;
+    height: 294px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .img-portfolio-x {
+    width: 450px;
+    height: 294px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .img-portfolio-x {
     width: 450px;
@@ -5,6 +20,9 @@
   }
 }
 @media screen and (min-width: 767px) {
+  .portfolio {
+    align-items: flex-start;
+  }
   .img-portfolio-x {
     width: 354px;
     height: 294px;
