--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -187,7 +187,17 @@
     }
   }
 }
+.menu-contacts {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 
+  margin-bottom: 32px;
+
+  color: var(--color-header);
+}
 .menu-lists-contacts {
   margin-top: auto;
 }
