--- a/sass/layout/_burger.scss
+++ b/sass/layout/_burger.scss
@@ -30,6 +30,10 @@
   height: 100vh;
   background-color: #ffffff;
 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -66,17 +70,4 @@
   position: absolute;
   top: 10px;
   right: 15px;
-}
-
-.mobile-menu__conteiner {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-
-  position: relative;
-  min-height: 200px;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
-  padding-right: 40px;
 }
