--- a/css/main.css
+++ b/css/main.css
@@ -484,17 +484,17 @@ body {
 
 @media (min-device-pixel-ratio: 1) and (min-width: 480px), (-webkit-min-device-pixel-ratio: 1.1979166666666667) and (min-width: 480px), (min-resolution: 115dpi) and (min-width: 480px), (-webkit-min-device-pixel-ratio: 1) and (min-width: 480px), (min-resolution: 1dppx) and (min-width: 480px) {
   .hero__one {
-    background-image: url(../images/hero/hero.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero.jpg);
   }
 }
 @media (min-device-pixel-ratio: 2) and (min-width: 768px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
   .hero__one {
-    background-image: url(../images/hero/hero2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero2x.jpg);
   }
 }
 @media (min-device-pixel-ratio: 3) and (min-width: 1200px), (-webkit-min-device-pixel-ratio: 3) and (min-width: 1200px), (min-resolution: 288dpi) and (min-width: 1200px), (min-resolution: 3dppx) and (min-width: 1200px) {
   .hero__one {
-    background-image: url(../images/hero/hero3x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero3x.jpg);
   }
 }
 @media screen and (min-width: 480px) {
@@ -834,15 +834,14 @@ body {
   .footer-container {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    align-items: baseline;
+    justify-content: space-around;
   }
 
   .mobile-footer {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-right: 173px;
   }
 
   .block-footer {
