--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -17,7 +17,11 @@
   (min-resolution: 115dpi) and (min-width: 480px),
   (min-resolution: 1dppx) and (min-width: 480px) {
   .hero__one {
-    background-image: url(../images/hero/hero.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero.jpg);
   }
 }
 
@@ -25,7 +29,11 @@
   (min-resolution: 192dpi) and (min-width: 768px),
   (min-resolution: 2dppx) and (min-width: 768px) {
   .hero__one {
-    background-image: url(../images/hero/hero2x.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero2x.jpg);
   }
 }
 
@@ -33,7 +41,11 @@
   (min-resolution: 288dpi) and (min-width: 1200px),
   (min-resolution: 3dppx) and (min-width: 1200px) {
   .hero__one {
-    background-image: url(../images/hero/hero3x.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero3x.jpg);
   }
 }
 @media screen and (min-width: 480px) {
