--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    width: 738px;
     margin: 0 auto;
   }
 }
@@ -147,6 +147,20 @@ body {
   width: 270px;
 }
 
+@media screen and (max-width: 767px) {
+  .comande-icon-list {
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+  }
+}
+@media screen and (min-width: 767px) {
+  .comande-icon-list {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+  }
+}
 .comande-icon-list {
   display: flex;
   list-style: none;
@@ -198,6 +212,17 @@ body {
 }
 
 @media screen and (max-width: 767px) {
+  .header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+  .header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .nav {
     display: none;
   }
@@ -223,6 +248,38 @@ body {
     margin-right: 88px;
   }
 }
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 30px;
+    padding-bottom: 31px;
+    border-bottom: 1px solid #ececec;
+  }
+
+  .header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .contacts__list {
+    font-size: 14px;
+    line-height: 1.17;
+  }
+
+  .contacts__list {
+    padding-right: 25px;
+  }
+
+  .burger-btn {
+    display: none;
+  }
+
+  .mail__link,
+.tel__link {
+    display: flex;
+    align-items: center;
+  }
+}
 @media screen and (min-width: 1200px) {
   .contacts__list {
     display: flex;
@@ -237,35 +294,12 @@ body {
   .logo__margin {
     margin-right: 93px;
   }
-}
-@media screen and (min-width: 768px) {
+
   .contacts__list {
-    justify-content: center;
-    align-items: center;
-  }
-
-  .burger-btn {
-    display: none;
-  }
-
-  .mail__link,
-.tel__link {
-    display: flex;
-    align-items: center;
+    font-size: 14px;
+    line-height: 1.23;
   }
 }
-.header {
-  padding-top: 30px;
-  padding-bottom: 31px;
-  border-bottom: 1px solid #ececec;
-}
-
-.header__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
 .border-bottom {
   border-bottom: 1px solid #eeeeee;
 }
@@ -311,8 +345,6 @@ body {
 
 .contacts__list {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.23;
   letter-spacing: 0.02em;
   list-style: none;
   margin-left: auto;
@@ -559,7 +591,7 @@ body {
   border-radius: 4px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .benefits {
     align-items: center;
   }
@@ -567,11 +599,11 @@ body {
   .benefits__list {
     align-items: center;
     flex-direction: column;
-    width: 100vw;
+    width: 450px;
   }
 
   .benefits__item--icon {
-    width: 100vw;
+    width: 450px;
   }
 
   .benefits-title {
@@ -581,9 +613,10 @@ body {
     margin: 0 auto;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 768px) {
   .benefits__list {
     flex-wrap: wrap;
+    justify-content: space-evenly;
     margin-top: -30px;
     margin-right: -30px;
   }
@@ -777,19 +810,9 @@ body {
   .customers-icon-list {
     list-style: none;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .customers-icon-list {
-    list-style: none;
-    display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     margin-left: -30px;
     margin-top: -30px;
   }
@@ -800,6 +823,32 @@ body {
     border: 1px dashed #eeeeee;
     border-style: solid;
   }
+
+  .customers-icons {
+    width: 208px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .customers-icon-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .customers-icons {
+    margin-left: 30px;
+    margin-top: 30px;
+    border: 1px dashed #eeeeee;
+    border-style: solid;
+  }
+
+  .customers-icons {
+    width: 210px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .customers-icon-list {
@@ -807,12 +856,15 @@ body {
     list-style: none;
     justify-content: space-between;
   }
+
+  .customers-icons {
+    width: 170px;
+  }
 }
 .customers-icons {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
   height: 92px;
   fill: #afb1b8;
   border: 1px solid #afb1b8;
@@ -860,6 +912,7 @@ body {
 @media screen and (max-width: 767px) {
   .footer-container {
     flex-direction: column;
+    align-items: center;
   }
 
   .mobile-footer {
@@ -1283,17 +1336,6 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 528px;
-  height: 581px;
-  background-color: #ffffff;
-  transform: translate(-50%, -50%);
-  padding: 40px;
-}
-
 .close-btn {
   position: absolute;
   top: 8px;
@@ -1318,6 +1360,36 @@ body {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 425px;
+    height: 609px;
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .modal {
+    width: 425px;
+    height: 609px;
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+    padding: 40px;
+  }
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: #ffffff;
+  transform: translate(-50%, -50%);
+  padding: 40px;
 }
 
 .data {
@@ -1452,12 +1524,16 @@ body {
   border: 0.2px solid #2196f3;
 }
 
+@media screen and (min-width: 767px) {
+  .burger-btn {
+    margin-right: 15px;
+  }
+}
 .burger-btn {
   justify-content: right;
   background-color: transparent;
   border: none;
   cursor: pointer;
-  margin-right: 15px;
 }
 .burger-btn__icon {
   height: 40px;
@@ -1514,6 +1590,6 @@ body {
 
 .mobile-menu__close-btn {
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 20px;
+  right: 80px;
 }/*# sourceMappingURL=main.css.map */
