--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,5 +1,5 @@
-// -480
-@media screen and (max-width: 480px) {
+// -767
+@media screen and (max-width: 767px) {
   .benefits {
     align-items: center;
   }
@@ -7,10 +7,10 @@
   .benefits__list {
     align-items: center;
     flex-direction: column;
-    width: 100vw;
+    width: 450px;
   }
   .benefits__item--icon {
-    width: 100vw;
+    width: 450px;
   }
   .benefits-title {
     display: flex;
@@ -20,9 +20,10 @@
   }
 }
 // -1200
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 768px) {
   .benefits__list {
     flex-wrap: wrap;
+    justify-content: space-evenly;
     margin-top: -30px;
     margin-right: -30px;
   }
