--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -1,3 +1,33 @@
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 425px;
+    height: 609px;
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .modal {
+    width: 425px;
+    height: 609px;
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+    padding: 40px;
+  }
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: #ffffff;
+  transform: translate(-50%, -50%);
+  padding: 40px;
+}
+
 .data {
   font-weight: 700;
   font-size: 20px;
